--- a/styles/blogstylesclient.css
+++ b/styles/blogstylesclient.css
@@ -1,49 +1,38 @@
-h1 {
+.tiptap h1 {
   font-size: 36px;
 }
 
-h2 {
+.tiptap h2 {
   font-size: 1.5em;
 }
 
-h3 {
+.tiptap h3 {
   font-size: 1.3em;
 }
 
 
-.tiptap {
-  >*+* {
-    margin-top: 0.75em;
-  }
 
-  ul,
-  ol {
-    padding: 0 1rem;
-  }
-}
 
-ul {
+.tiptap ul {
   list-style: disc !important;
 }
 
-pre {
+.tiptap pre {
   background: #3b3a3a;
   color: #c2c2c2;
   border-radius: 7px;
 }
 
-a {
+.tiptap a {
   color: rgb(60, 60, 254);
-
   cursor: pointer;
 }
 
-a.underline {
+.tiptap a.underline {
   text-decoration: underline;
 }
 
 .tiptap {
-
   min-height: 350px;
   overflow-y: auto;
   background: #fff;
